RESOLVED FIXED300444
[GStreamer][WebRTC] Potential deadlocks when attempting to close the connection while adding ICE candidates
https://bugs.webkit.org/show_bug.cgi?id=300444
Summary [GStreamer][WebRTC] Potential deadlocks when attempting to close the connecti...
Philippe Normand
Reported 2025-10-09 05:20:21 PDT
.
Attachments
Philippe Normand
Comment 1 2025-10-09 05:26:21 PDT
EWS
Comment 2 2025-10-10 02:34:57 PDT
Committed 301308@main (454579957b8a): <https://commits.webkit.org/301308@main> Reviewed commits have been landed. Closing PR #52064 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-10-10 02:35:11 PDT
Note You need to log in before you can comment on or make changes to this bug.